--- a/packages/kc-themes/src/main/resources/theme/dupman/login/messages/messages_en.properties
+++ b/packages/kc-themes/src/main/resources/theme/dupman/login/messages/messages_en.properties
@@ -4,7 +4,10 @@ registerTitle=Join Us Today: Create Your Account
 registerSubtitle=Simplify Your Workflow - Update Multiple Drupal Instances Seamlessly with dupman
 emailForgotTitle=Forgot Your Password? Let's Get You Back In
 emailForgotSubtitle=Recover Access to Your dupman Account with Ease.
+logoutConfirmTitle=Logging Out from dupman
+logoutConfirmHeader=Stay Secure and Come Back Soon!
 welcomeText=Welcome to dupman.
 identity-provider-login-label=Or
 alreadyHaveAccount=Already have an account?
 signInWith=Sign in with {0}
+backToApplication=&laquo; Back to dupman
